HUE-6728 [assist] Fix truncated input in the assist filter

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -614,7 +614,8 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-
+  height: 25px;
+  padding: 0 5px;
   border-radius: 4px;
   border: 1px solid @input-border;
   box-shadow: none;
